packages/build/tests/error/fixtures/monitor_fail_build/plugin.js
module.exports = {
  onPreBuild({
    utils: {
      build: { failBuild },
    },
  }) {
    failBuild('test')
  },
}
